/** A pixel box relative to the grid host's content box. */
export interface Rectangle {
  left: number;
  top: number;
  width: number;
  height: number;
}
